--- a/hw06-maven/pom.xml
+++ b/hw06-maven/pom.xml
@@ -2,15 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>pet1</artifactId>
+        <groupId>com.home.project</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.home.project</groupId>
-    <artifactId>pet1</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>hw01-maven</module>
-        <module>hw04-maven</module>
-        <module>hw06-maven</module>
-    </modules>
+    <artifactId>hw06-maven</artifactId>
+
+
 </project>
